llvm-gcc-4.2-2.9/gcc/testsuite/g++.dg/parse/error17.C
// PR c++/16965

// LLVM LOCAL
template <typename T> struct B { // { dg-error "" }
  static int Bar(T); // { dg-error "" }
}; 
struct D : B<int>, B<char> {}; 
 
int i2 = D::Bar(2); // { dg-error "" }
